--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ body {
     font-size: 20px;
     position: absolute;
     top: 34%;
-    right: 47%;
+    right: auto;
 }
 
 #foot1 h1::before {
