--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ body {
     height: 115px;
     width: 118px;
     border-radius: 50%;
+    top: 20%;
     left: 12%;
     opacity: 0;
     transition: all ease 0.6s;
